<resources>
    <string name="app_name">Weather Forecast</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="alerts">Alerts</string>
    <string name="settings">Settings</string>
    <string name="title_of_dailog_gps_or_map">Please Choose any way to determine your location.</string>
    <string name="gps">GPS</string>
    <string name="fab_of_maps" translatable="false">FAB Of Maps</string>
    <string name="humidity">Humidity</string>
    <string name="clouds">Clouds</string>
    <string name="pressure">Pressure</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="hourly_icon" translatable="false">Hourly Icon</string>
    <string name="you_can_t_press_more_than_one_click_but_you_can_drag_the_marker">You can press more than one click ,delete mark and  you can drag the marker</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="enter_date">Enter Date:</string>
    <string name="with_sound">with sound</string>
    <string name="without_sound">without sound</string>
    <string name="enter_time">Enter Time:</string>
    <string name="location">Location</string>
    <string name="switch_off_on">Click to switch on or off</string>
    <string name="determine_by_maps">Click to determine location by map</string>
    <string name="maps">Maps</string>
    <string name="units">Units</string>
    <string name="kelvin">kelvin</string>
    <string name="Celsius">Celsius</string>
    <string name="Fahrenheit">Fahrenheit</string>
    <string name="metre_sec">metre/sec</string>
    <string name="miles_hour">miles/hour</string>
    <string name="Arabic">Arabic</string>
    <string name="English">English</string>
    <string name="determine_temp">Determine Temp Units</string>
    <string name="determine_wind">Determine Wind Speed Unit</string>
    <string name="select_lang">Select Language</string>
    <string name="alert">Alert</string>
    <string name="unknown_place">Unknown Place</string>
    <string name="udpate_lang">Restart Your App to update language</string>
    <string name="please_e_d_t">Please enter date and time</string>
    <string name="no_alert">No Alert</string>
    <string name="load_data">Loading Data, Please Wait</string>
    <string name="notification">Notification</string>
    <string name="alarm">Alarm</string>
    <string name="set_alarm">Done!</string>


</resources>