<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <fragment

        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.views.home.location.maps.MapsFragmentSH" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_can_t_press_more_than_one_click_but_you_can_drag_the_marker"
        android:background="@drawable/custom_bnv"
        android:padding="16dp"
        android:textSize="18sp"
        android:maxLines="3"
        android:textColor="#fff"
        android:layout_margin="16dp"
        android:layout_gravity="center_horizontal"/>
    <Button
        android:id="@+id/deleteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|bottom"
        android:layout_margin="16dp"
        android:text="@string/delete"
        android:background="@drawable/custom_btn_dailog_gps_or_maps"
        />
    <Button
        android:id="@+id/doneBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:text="@string/done"
        android:background="@drawable/custom_btn_dailog_gps_or_maps"
        />
</FrameLayout>