<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/addAlert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/custom_btn_dailog_gps_or_maps"
            android:padding="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/labelT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:drawablePadding="4dp"
                android:text="@string/enter_time"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:drawableLeftCompat="@drawable/ic_time"
                app:drawableStartCompat="@drawable/ic_time"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/labelT"
                app:layout_constraintLeft_toRightOf="@id/labelT"
                app:layout_constraintStart_toEndOf="@id/labelT"
                app:layout_constraintTop_toTopOf="@id/labelT"

                />

            <TextView
                android:id="@+id/labelD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:drawablePadding="4dp"
                android:text="@string/enter_date"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:drawableLeftCompat="@drawable/ic_calendar"
                app:drawableStartCompat="@drawable/ic_calendar"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/labelT" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/labelD"
                app:layout_constraintLeft_toRightOf="@id/labelD"
                app:layout_constraintStart_toEndOf="@id/labelD"
                app:layout_constraintTop_toTopOf="@id/labelD" />
            <RadioGroup
                android:id="@+id/radio_group_sound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/labelD">

                <RadioButton
                    android:id="@+id/withoutSound"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:text="@string/without_sound" />

                <RadioButton
                    android:id="@+id/withSound"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"
                    android:text="@string/with_sound" />
            </RadioGroup>
            <RadioGroup
                android:id="@+id/radioGroupNOrA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radio_group_sound">

                <RadioButton
                    android:id="@+id/notification"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:text="@string/notification" />

                <RadioButton
                    android:id="@+id/Alarm"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"
                    android:text="@string/alarm" />
            </RadioGroup>


        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/alertRV"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addAlert"/>

        <ImageView
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/ic_add_bell"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>